--- a/rbistrici22.ipynb
+++ b/rbistrici22.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "33e3dae6",
+   "metadata": {},
+   "source": [
+    "<h1>Uvod</h1>\n",
+    "Odabrao sam temu Analiza unosa kofeina na trajanje i kvalitetu sna jer je kofein široko rasprostranjen u svakodnevnoj prehrani, a često se konzumira bez razmišljanja o njegovom utjecaju na san. Budući da san ima ključnu ulogu u zdravlju i funkcioniranju organizma, važno je istražiti kako unos kofeina može utjecati na njegovu kvalitetu i trajanje. \n",
+    "Podaci o snu učitavaju se iz CSV datoteke, koja je preuzeta s platforme Kaggle, u Pandas DataFrame, što omogućuje jednostavnu obradu i analizu podataka [1], [3].\n",
+    "Podaci o unosu kofeina učitavaju se iz JSON datoteke generirane pomoću online alata za generiranje testnih podataka [2]. Koristio sam uglavnom materijale s kolegija za izradu projekta uz korištenje umjetne inteligencije (ChatGPT)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "id": "7d95ccf6",
    "metadata": {},
    "outputs": [],
@@ -14,8 +25,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e01105c7",
+   "metadata": {},
+   "source": [
+    "Na početku se učitavaju biblioteke koje su potrebne za rad s podacima, crtanje grafova i spremanje podataka u bazu. Sve daljnje analize temelje se na ovim alatima."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "id": "05ed41e2",
    "metadata": {},
    "outputs": [
@@ -163,7 +182,7 @@
        "4         140/90          85         3000    Sleep Apnea  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,8 +193,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "66726593",
+   "metadata": {},
+   "source": [
+    "Podaci o snu učitavaju se iz CSV datoteke u Pandas DataFrame. Prikaz prvih nekoliko redaka služi za brzu provjeru da su podaci ispravno učitani."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "id": "97f3708a",
    "metadata": {},
    "outputs": [
@@ -211,8 +238,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b7681b98",
+   "metadata": {},
+   "source": [
+    "Ovdje se provjerava struktura skupa podataka, broj zapisa i tipovi stupaca kako bi se lakše razumjelo s kakvim se podacima radi."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "id": "d6e5632e",
    "metadata": {},
    "outputs": [
@@ -298,7 +333,7 @@
        "4         57 2023-01-04   7:19           40          Cola"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,8 +344,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f2e23411",
+   "metadata": {},
+   "source": [
+    "Učitavaju se podaci o unosu kofeina iz JSON datoteke, čime se koristi drugi izvor podataka drugačijeg formata, što je jedan od zahtjeva projekta."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "id": "e03202dd",
    "metadata": {},
    "outputs": [],
@@ -319,8 +362,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e947fdf8",
+   "metadata": {},
+   "source": [
+    "Datum se pretvara u odgovarajući format kako bi se kasnije mogla napraviti vremenska analiza i zbrajanje unosa kofeina po danima."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "id": "279c2e21",
    "metadata": {},
    "outputs": [
@@ -394,7 +445,7 @@
        "4          2 2023-07-24          232"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,8 +462,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "309ac496",
+   "metadata": {},
+   "source": [
+    "Unos kofeina se zbraja po osobi i danu kako bi se dobila ukupna dnevna količina kofeina za svakog ispitanika."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "id": "c643c26f",
    "metadata": {},
    "outputs": [
@@ -492,7 +551,7 @@
        "4          2 2023-07-24          232           High"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,8 +570,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "68dd50b3",
+   "metadata": {},
+   "source": [
+    "Definira se jednostavna funkcija koja razvrstava unos kofeina u tri razine, što olakšava usporedbu rezultata.\n",
+    "Na temelju ukupnog dnevnog unosa, svakoj osobi dodjeljuje se razina unosa kofeina."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "id": "3d814724",
    "metadata": {},
    "outputs": [],
@@ -521,8 +589,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3b085a70",
+   "metadata": {},
+   "source": [
+    "Naziv stupca se prilagođava kako bi se podaci o snu mogli povezati s podacima o unosu kofeina."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "id": "155eb089",
    "metadata": {},
    "outputs": [
@@ -695,7 +771,7 @@
        "4           High  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,8 +787,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14b0b49e",
+   "metadata": {},
+   "source": [
+    "Podaci o snu i kofeinu spajaju se u jedan zajednički skup podataka koji se dalje koristi za analizu."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "id": "433552d5",
    "metadata": {},
    "outputs": [
@@ -768,7 +852,7 @@
        "2         Medium        7.127507"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,8 +869,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3e45e458",
+   "metadata": {},
+   "source": [
+    "Računa se prosječno trajanje sna za svaku razinu unosa kofeina kako bi se vidjelo postoje li razlike između skupina."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "id": "92b40048",
    "metadata": {},
    "outputs": [
@@ -842,7 +934,7 @@
        "2         Medium          7.292264"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,8 +951,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "15acb680",
+   "metadata": {},
+   "source": [
+    "Na isti način se računa i prosječna kvaliteta sna za svaku razinu unosa kofeina."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "id": "2ba26d3f",
    "metadata": {},
    "outputs": [
@@ -891,8 +991,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81afd7c2",
+   "metadata": {},
+   "source": [
+    "Rezultati analize trajanja sna prikazuju se grafički kako bi se razlike između razina unosa kofeina lakše uočile."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "id": "952078bd",
    "metadata": {},
    "outputs": [
@@ -921,8 +1029,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "17897785",
+   "metadata": {},
+   "source": [
+    "Ovaj graf prikazuje odnos između unosa kofeina i kvalitete sna te omogućuje jednostavniju interpretaciju dobivenih rezultata."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "id": "bcbab4e6",
    "metadata": {},
    "outputs": [],
@@ -932,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "id": "33c46be8",
    "metadata": {},
    "outputs": [
@@ -942,7 +1058,7 @@
        "996"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,8 +1070,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef6bbf28",
+   "metadata": {},
+   "source": [
+    "Podaci se spremaju u SQLite bazu podataka kako bi bili trajno dostupni za daljnji dohvat i analizu. Za komunikaciju s bazom koristi se SQLAlchemy biblioteka [4], a REST API je implementiran pomoću Flask okvira [5]."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "id": "24d59610",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1252,7 @@
        "4          232           High  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,8 +1263,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e7c8686",
+   "metadata": {},
+   "source": [
+    "Dohvaćanjem nekoliko zapisa iz baze provjerava se jesu li integrirani podaci ispravno spremljeni."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
    "id": "79db8a81",
    "metadata": {},
    "outputs": [],
@@ -1154,8 +1286,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4b825693",
+   "metadata": {},
+   "source": [
+    "Učitavaju se potrebne biblioteke za izradu REST API-ja. \n",
+    "Postavlja se Flask aplikacija i povezuje s bazom podataka u kojoj se nalaze obrađeni podaci."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "id": "d8924785",
    "metadata": {},
    "outputs": [],
@@ -1167,8 +1308,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ba9ae326",
+   "metadata": {},
+   "source": [
+    "Ova ruta omogućuje dohvat svih integriranih podataka u JSON formatu. Pristupa se pomoću http://127.0.0.1:5000/data nakon pokretanja Flash aplikacije."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59f721b6",
+   "metadata": {},
+   "source": [
+    "![http://127.0.0.1:5000/data](data.png)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
    "id": "b1c0b76e",
    "metadata": {},
    "outputs": [],
@@ -1185,8 +1342,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f102b5d1",
+   "metadata": {},
+   "source": [
+    "Putem ove rute moguće je dohvatiti prosječno trajanje sna po razinama unosa kofeina. Pristupa se pomoću http://127.0.0.1:5000/analysis/sleep nakon pokretanja Flash aplikacije."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "933ba342",
+   "metadata": {},
+   "source": [
+    "![http://127.0.0.1:5000/analysis/sleep](analysissleep.png)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "id": "7842a6b7",
    "metadata": {},
    "outputs": [],
@@ -1203,8 +1376,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "42287a02",
+   "metadata": {},
+   "source": [
+    "Ova ruta vraća podatke o prosječnoj kvaliteti sna za svaku razinu unosa kofeina. Pristupa se pomoću http://127.0.0.1:5000/analysis/quality nakon pokretanja Flash aplikacije."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db996e5f",
+   "metadata": {},
+   "source": [
+    "![http://127.0.0.1:5000/analysis/quality](analysisquality.png)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 62,
    "id": "6d918fe8",
    "metadata": {},
    "outputs": [
@@ -1222,16 +1411,67 @@
      "text": [
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
-      "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [20/Jan/2026 16:11:53] \"GET / HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [20/Jan/2026 16:11:56] \"GET /data HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [20/Jan/2026 16:12:40] \"GET /analysis/quality HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [20/Jan/2026 16:12:44] \"GET /analysis/sleep HTTP/1.1\" 200 -\n"
+      "Press CTRL+C to quit\n"
      ]
     }
    ],
    "source": [
     "app.run(host=\"127.0.0.1\", port=5000, debug=False, use_reloader=False, threaded=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "960f4627",
+   "metadata": {},
+   "source": [
+    "Na kraju se pokreće Flask aplikacija, čime rezultati analize postaju dostupni kroz REST API u web pregledniku."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f80db16",
+   "metadata": {},
+   "source": [
+    "<h1>Kritički osvrt</h1>\n",
+    "Projekt pokazuje da je moguće na jednostavan način povezati podatke iz različitih izvora i analizirati njihov međusobni odnos. Korišteni alati omogućuju relativno brzu obradu podataka, njihovu pohranu u bazu te dohvat rezultata putem REST API-ja, što je primjenjivo i u stvarnim aplikacijama. Takav pristup može se koristiti u sustavima za praćenje zdravlja ili životnih navika korisnika.\n",
+    "\n",
+    "Ipak, potrebno je istaknuti da su podaci o unosu kofeina generirani, zbog čega rezultati ne odražavaju stvarne navike ispitanika. Također, nisu uzeti u obzir svi čimbenici koji mogu utjecati na san, poput vremena konzumacije kofeina ili individualnih razlika među osobama. Zbog toga rezultate treba promatrati kao ilustrativne, a ne kao potpuno pouzdane zaključke.\n",
+    "Tijekom izrade rada korišten je i alat generativne umjetne inteligencije za pomoć pri pisanju i razvoju koda [6]."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b64005c1",
+   "metadata": {},
+   "source": [
+    "<h1>Zaključak</h1>\n",
+    "U ovom projektu provedena je analiza utjecaja unosa kofeina na trajanje i kvalitetu sna korištenjem heterogenih izvora podataka. Podaci su uspješno integrirani, analizirani i vizualizirani, a rezultati su dostupni putem REST API-ja. Analiza je pokazala da postoje razlike u trajanju i kvaliteti sna između različitih razina unosa kofeina.\n",
+    "\n",
+    "Iako korišteni podaci imaju određena ograničenja, projekt je uspješno ispunio zadani cilj i pokazao kako se mogu povezati različiti izvori podataka te koristiti za osnovnu analizu. Ovakav pristup predstavlja dobru osnovu za daljnji razvoj i primjenu uz korištenje stvarnih podataka."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ceea92ba",
+   "metadata": {},
+   "source": [
+    "<h3>Literatura</h3>\n",
+    "[1] U. M. of Manchester, Sleep Health and Lifestyle Dataset, Kaggle, 2023. Dostupno na: https://www.kaggle.com/datasets/uom190346a/sleep-health-and-lifestyle-dataset/data\n",
+    " [Pristupljeno: siječanj 2026.].\n",
+    "\n",
+    "[2] Generatedata, Generate Data Online Tool,  Dostupno na: https://generatedata.com\n",
+    " [Pristupljeno: siječanj 2026.].\n",
+    "\n",
+    "[3] Pandas dokumentacija, 2026.  Dostupno na: https://pandas.pydata.org/docs/. [Pristupljeno: siječanj 2026.].\n",
+    "\n",
+    "[4] SQLAlchemy dokumentacija, 2026.  Dostupno na: https://docs.sqlalchemy.org/\n",
+    " [Pristupljeno: siječanj 2026.].\n",
+    "\n",
+    "[5] Pallets Projects, Flask dokumentacija, 2026.  Dostupno na: https://flask.palletsprojects.com/\n",
+    " [Pristupljeno: siječanj 2026.].\n",
+    "\n",
+    "[6] OpenAI, ChatGPT, Dostupno na: https://chatgpt.com/share/6972208b-03f0-8009-a395-3af65d9b4a29\n",
+    " [Pristupljeno: siječanj 2026.].\n"
    ]
   }
  ],
